--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,19 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ipyfilechooser'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "In  \u001b[0;34m[2]\u001b[0m:\nLine \u001b[0;34m15\u001b[0m:    \u001b[34mfrom\u001b[39;49;00m \u001b[04m\u001b[36mipyfilechooser\u001b[39;49;00m \u001b[34mimport\u001b[39;49;00m FileChooser\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipyfilechooser'\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
-    "from IPython.display import display, Image, JSON, Markdown, HTML, display_pdf, clear_output\n",
+    "from IPython.display import display, JSON, Markdown, HTML, display_pdf, clear_output\n",
+    "try: \n",
+    "    from IPython.display import Image \n",
+    "except:\n",
+    "    pass\n",
     "from markdown import markdown\n",
     "from datetime import datetime\n",
     "\n",
     "# widget stuff\n",
     "import ipywidgets as widgets\n",
-    "import ipysheet\n",
+    "import ipysheetconda \n",
     "from ipysheet import from_dataframe, to_dataframe\n",
     "from ipyfilechooser import FileChooser\n",
     "\n",
@@ -37,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,74 +927,6 @@
     "                    \n",
     "    def _ipython_display_(self):\n",
     "        self._display()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f2ccb815e054ac0938fa636a2e1d6b7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(HBox(children=(HTML(value='<p>asdf</p>'), HBox(children=(ToggleButton(value=Fals…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de125d96268c4e56a9680ace09da41b7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "li_tmp = [\n",
-    "    {\n",
-    "        'name':'asdf',\n",
-    "        'label':'asdf',\n",
-    "        'value':pd.DataFrame({'cols':[0,1]}).to_json(),\n",
-    "        'widget':'ipysheet'\n",
-    "    }\n",
-    "]\n",
-    "D = EditListOfDicts(li_tmp)\n",
-    "D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'EditListOfDicts' object has no attribute 'box_ipysheet'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-79-6b145187a236>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mD\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbox_ipysheet\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'EditListOfDicts' object has no attribute 'box_ipysheet'"
-     ]
-    }
-   ],
-   "source": [
-    "D."
    ]
   },
   {
@@ -1885,21 +1832,15 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main] *",
+   "display_name": "Python 3.8 (XPython)",
    "language": "python",
-   "name": "conda-env-mf_main-py"
+   "name": "xpython"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
