--- a/ipyrun/_runconfig.ipynb
+++ b/ipyrun/_runconfig.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -90,6 +90,7 @@
     "        self.script_outputs_template = self._script_outputs_template()\n",
     "        self.process_name = self._process_name()\n",
     "        self.pretty_name = self._pretty_name()\n",
+    "        self.fdir_appdata = self._fdir_appdata()\n",
     "        self.fdir_inputs = self._fdir_inputs()\n",
     "        self.fdir_inputs_archive = self._fdir_inputs_archive()\n",
     "        self.fdir_template_inputs = self._fdir_template_inputs()\n",
@@ -112,6 +113,7 @@
     "        self.config['jobno'] = self.jobno\n",
     "        self.config['process_name'] = self.process_name\n",
     "        self.config['pretty_name'] = self.pretty_name\n",
+    "        self.config['fdir_appdata'] = self.fdir_appdata\n",
     "        self.config['fdir_inputs'] = self.fdir_inputs\n",
     "        self.config['fdir_inputs_archive'] = self.fdir_inputs_archive\n",
     "        self.config['fpth_inputs'] = self.fpth_inputs\n",
@@ -166,14 +168,23 @@
     "        else:\n",
     "            return self.process_name\n",
     "\n",
+    "    def _fdir_appdata(self):\n",
+    "        # add inputs folder name\n",
+    "        if 'fdir_appdata' in self.user_keys:\n",
+    "            make_dir(self.config['fdir_inputs'])\n",
+    "            return self.config['fdir_inputs']\n",
+    "        else:\n",
+    "            make_dir(os.path.join(self.fdir,r'appdata'))\n",
+    "            return os.path.join(self.fdir,r'appdata')\n",
+    "        \n",
     "    def _fdir_inputs(self):\n",
     "        # add inputs folder name\n",
     "        if 'fdir_inputs' in self.user_keys:\n",
     "            make_dir(self.config['fdir_inputs'])\n",
     "            return self.config['fdir_inputs']\n",
     "        else:\n",
-    "            make_dir(os.path.join(self.fdir,r'appdata\\inputs'))\n",
-    "            return os.path.join(self.fdir,r'appdata\\inputs')\n",
+    "            make_dir(os.path.join(self.fdir,self.fdir_appdata,'inputs'))\n",
+    "            return os.path.join(self.fdir,self.fdir_appdata,'inputs')\n",
     "\n",
     "    def _fdir_inputs_archive(self):\n",
     "        # add inputs folder name\n",
@@ -181,8 +192,8 @@
     "            make_dir(self.config['fdir_inputs_archive'])\n",
     "            return self.config['fdir_inputs_archive']\n",
     "        else:\n",
-    "            make_dir(os.path.join(self.fdir,r'appdata\\inputs\\archive'))\n",
-    "            return os.path.join(self.fdir,r'appdata\\inputs\\archive')\n",
+    "            make_dir(os.path.join(self.fdir,self.fdir_appdata,'archive'))\n",
+    "            return os.path.join(self.fdir,self.fdir_inputs,'archive')\n",
     "\n",
     "    def _fdir_template_inputs(self):\n",
     "        return os.path.join(os.path.dirname(self.config['fpth_script']),r'template_inputs')\n",
@@ -202,9 +213,12 @@
     "\n",
     "    def _fpth_inputs(self):\n",
     "        src = self.fpth_template_input\n",
+    "        ext = os.path.splitext(src)[1]\n",
     "        \n",
     "        if 'fpth_inputs' in self.user_keys:\n",
     "            dstn = self.config['fpth_inputs']\n",
+    "        elif self.process_name is not self.script_name:\n",
+    "            dstn = os.path.join(self.fdir_inputs, 'inputs-'+self.process_name+ext)\n",
     "        else:\n",
     "            dstn = os.path.join(self.fdir_inputs, os.path.basename(src))\n",
     "\n",
@@ -235,7 +249,8 @@
     "            for pattern in patterns:\n",
     "                fpths = recursive_glob(rootdir=v['fdir'],pattern=pattern,recursive=True)\n",
     "                fpths = [fpth for fpth in fpths if '.ipynb_checkpoints' not in fpth]\n",
-    "                di[k]['fpths'] = fpths\n",
+    "                di[k]['fpths'].extend(fpths)\n",
+    "                di[k]['fpths'] = list(set(di[k]['fpths']))\n",
     "                cnt += len(fpths)\n",
     "                self.errors.append(['{0} not csv or json'.format(fpth) for fpth in fpths if os.path.splitext(fpth)[1] not in valid_exts])\n",
     "        if cnt == 0:\n",
@@ -246,7 +261,7 @@
     "        if 'fdir_log' in self.user_keys:\n",
     "            return self.config['fdir_log']\n",
     "        else:\n",
-    "            return os.path.join(self.fdir,r'appdata\\log')\n",
+    "            return os.path.join(self.fdir_appdata,'log')\n",
     "\n",
     "    def _fnm_log(self):\n",
     "        if 'fnm_log' in self.user_keys:\n",
@@ -260,7 +275,7 @@
     "            make_dir(fdir)\n",
     "            return fdir\n",
     "        else:\n",
-    "            fdir = os.path.join(self.fdir,r'appdata\\config')\n",
+    "            fdir = os.path.join(self.fdir_appdata,'config')\n",
     "            make_dir(fdir)\n",
     "            return fdir\n",
     "\n",
@@ -319,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 2
@@ -330,30 +345,27 @@
      "output_type": "stream",
      "text": [
       "{'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun',\n",
+      " 'fdir_appdata': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata',\n",
       " 'fdir_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config',\n",
       " 'fdir_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
       " 'fdir_inputs_archive': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive',\n",
       " 'fdir_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log',\n",
       " 'fdir_outputs': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\external'],\n",
-      " 'fnm_config': 'config-eplus_pipework_params.json',\n",
-      " 'fnm_log': 'log-eplus_pipework_params.csv',\n",
-      " 'fpth_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config\\\\config-eplus_pipework_params.json',\n",
-      " 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
+      " 'fnm_config': 'config-pipework.json',\n",
+      " 'fnm_log': 'log-pipework.csv',\n",
+      " 'fpth_config': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\config\\\\config-pipework.json',\n",
+      " 'fpth_inputs': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-pipework.csv',\n",
       " 'fpth_inputs_options': {'project': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs',\n",
-      "                                     'fpths': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params-1.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625-inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200605-1625inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200607_1420-jg-inputs-eplus_pipework_params.csv',\n",
-      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\archive\\\\20200611_1021-jg-inputs-eplus_pipework_params.csv']},\n",
+      "                                     'fpths': ['C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-pipework.csv',\n",
+      "                                               'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\inputs\\\\inputs-eplus_pipework_params.csv']},\n",
       "                         'template': {'fdir': 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs',\n",
       "                                      'fpths': ['C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\template_inputs\\\\inputs-eplus_pipework_params.csv']}},\n",
-      " 'fpth_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log\\\\log-eplus_pipework_params.csv',\n",
+      " 'fpth_log': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\ipyrun\\\\appdata\\\\log\\\\log-pipework.csv',\n",
       " 'fpth_script': 'C:\\\\engDev\\\\git_mf\\\\MF_Toolbox\\\\dev\\\\mf_scripts\\\\eplus_pipework_params.py',\n",
       " 'fpths_outputs': {'0': 'C:\\\\engDev\\\\git_mf\\\\ipyrun\\\\data\\\\external\\\\eplus_pipework_params.csv'},\n",
       " 'jobno': 'C:\\\\e',\n",
-      " 'pretty_name': 'eplus_pipework_params',\n",
-      " 'process_name': 'eplus_pipework_params',\n",
+      " 'pretty_name': 'pipework',\n",
+      " 'process_name': 'pipework',\n",
       " 'script_outputs': {'0': {'description': 'a csv lookup table with the backend '\n",
       "                                         'nomenclature of how pipework '\n",
       "                                         'characteristics are named within '\n",
@@ -370,6 +382,7 @@
     "if __name__ =='__main__':\n",
     "    config = {\n",
     "        'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
+    "        'process_name':'pipework',\n",
     "        'fdir':'.',\n",
     "        #'fpth_inputs':r'C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\test\\test.csv',\n",
     "        #'fdir_inputs':r'C:\\engDev\\git_mf\\ipyrun\\ipyrun\\appdata\\inputs\\test'\n",
@@ -377,6 +390,9 @@
     "    from pprint import pprint\n",
     "    rc = RunConfig(config)\n",
     "    pprint(rc.config)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
