--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -80,11 +80,11 @@
     "        self.reset = widgets.Button(icon='fa-eye-slash',#'fa-repeat'\n",
     "                                tooltip='removes temporary output view',\n",
     "                                style={'font_weight':'bold'},\n",
-    "                                layout=widgets.Layout(width='5%'))\n",
+    "                                layout=widgets.Layout(width='50px'))\n",
     "        self.help = widgets.Button(icon='fa-question-circle',\n",
     "                                tooltip='describes the functionality of elements in the RunApp interface',\n",
     "                                style={'font_weight':'bold'},\n",
-    "                                layout=widgets.Layout(width='5%'))\n",
+    "                                layout=widgets.Layout(width='50px'))\n",
     "        self.edit_inputs = widgets.Button(description='edit inputs',\n",
     "                                tooltip='edit the user input information that is used when the script is executed',\n",
     "                                button_style='warning',\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -776,7 +776,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af46b7c1b838483394b546c27455a0c9",
+       "model_id": "cee5d4dda9984cf1b0579e34fabac80e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -790,7 +790,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7eacf945c54440b39d867ef554dfb678",
+       "model_id": "8f2655fc79344a0d8659e0d0e044934a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -837,7 +837,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e42e0750c984e0e9c7fdd17272470c7",
+       "model_id": "40fa70520563497d9bcd6ae0ada21289",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +851,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3317225a9e547fda952396c717e713f",
+       "model_id": "d28a8e6ea9f04397a8f6c44834eaa079",
        "version_major": 2,
        "version_minor": 0
       },
@@ -941,7 +941,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76db07724dcc4be485d151ce424d4ac8",
+       "model_id": "6f45a20afa0d4edc9ef509aae3f16d17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -955,7 +955,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b200741d5e1497aadff988a1e5f4e31",
+       "model_id": "d41caed03676478eb5ecc9d8ad3282c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -969,7 +969,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74bade5f91934eb09c0885fa13424543",
+       "model_id": "86830e7dd3f54040a561c90e59c60e95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -983,7 +983,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6f111a5712c415eab5bd0977feae290",
+       "model_id": "0ff0e45d83f54a949e0726b3917f4c17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -997,7 +997,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc7b7f84feb544c8a52fe063f81a6d77",
+       "model_id": "8a729a0565f74eb8a2d8e7d9cdfef848",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1011,7 +1011,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44c45199957f49e496c5dc8a8140c531",
+       "model_id": "30ff3c9b59f941b3be08d7941793efee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1025,7 +1025,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53edbec445b84263a1d319d83d62e865",
+       "model_id": "8ae6b52e663d4522bd066e549e991fb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1039,7 +1039,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1e4dedcd1634f6095d2e97327e44427",
+       "model_id": "51183d88f537461ca69d48a847c55f46",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1102,7 +1102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74ab24b506e049cda66c590c3667ae4e",
+       "model_id": "5f645fa8908a40708f565e014bf36ac8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1116,7 +1116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "16f7f0f670054eb2ad542d2ca178e4af",
+       "model_id": "5ef1956e17a242fe9b05736ca66c998f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1130,7 +1130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "858fa01f40b64dafb7e1e6b5c55e1c2e",
+       "model_id": "47a51065501a4feda9dffba44d5b5432",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1332,14 +1332,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
