--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -4,11 +4,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you dont have piexif installed\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
+    "import sys\n",
+    "sys.path.append('/mnt/c/engDev/git_mf/MF_Toolbox/dev')\n",
+    "os.environ[\"mf_root\"] = \"/mnt/c/engDev/git_mf\"\n",
     "import pandas as pd\n",
-    "from IPython.display import display, Image, JSON, Markdown, HTML, IFrame, clear_output\n",
+    "from IPython.display import display,  JSON, Markdown, HTML, IFrame, clear_output #Image,\n",
     "import time\n",
     "from ipyaggrid import Grid\n",
     "import ipywidgets as widgets\n",
@@ -383,17 +394,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#fpths=[os.path.join(os.environ['mf_root'],r'ipyrun\\data\\eg_filetypes\\eg_plotly.plotly')]\n",
-    "#d = DisplayFiles(fpths)\n",
-    "#d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -425,7 +425,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4fc66362f7124aa4bbda808d39fa4eb3",
+       "model_id": "56e9ecce0036464a9e9def4f97103972",
        "version_major": 2,
        "version_minor": 0
       },
@@ -494,7 +494,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7270892104e64b3da74d1b97c3711757",
+       "model_id": "eab8973d39f44099aa3dbf6aa5c00cbd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,7 +554,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89a56292837d48c1ba2d004f71089fb6",
+       "model_id": "a374d05d8c73456f83710c7cda94bf55",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,7 +592,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "595fc1fb6b75410d9cf56a46e7e57e3f",
+       "model_id": "9644e19a1632498f8b1429fc19c0bc0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -620,7 +620,8 @@
     "    # -\n",
     "\n",
     "    fdir = os.path.dirname(os.path.realpath('__file__'))\n",
-    "    fdir = os.path.realpath(os.path.join(fdir,r'..\\data\\eg_filetypes'))\n",
+    "    rel = os.path.join('..','data','eg_filetypes')\n",
+    "    fdir = os.path.realpath(os.path.join(fdir,rel))\n",
     "\n",
     "    fpths = recursive_glob(rootdir=fdir)\n",
     "\n",
@@ -652,6 +653,13 @@
     "    display(Markdown('''example, with fpths_ignore and fpth_prefix'''))\n",
     "    display(d3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -659,9 +667,9 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:mf_main] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-mf_main-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -673,7 +681,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
