Edited formatting of EditListOfDicts

--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 2
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "lines_to_end_of_cell_marker": 2,
     "lines_to_next_cell": 0
@@ -776,7 +776,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cee5d4dda9984cf1b0579e34fabac80e",
+       "model_id": "d3f065e003b14d59a61c931267625d3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -790,7 +790,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f2655fc79344a0d8659e0d0e044934a",
+       "model_id": "dbb7f08a492649919dec68dbf39fc86b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -837,7 +837,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40fa70520563497d9bcd6ae0ada21289",
+       "model_id": "c4e5ad9ee49941f6a83d5c7afbb4278d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -851,7 +851,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d28a8e6ea9f04397a8f6c44834eaa079",
+       "model_id": "c78628a3e2fa4a2ead5918c64dba57de",
        "version_major": 2,
        "version_minor": 0
       },
@@ -941,7 +941,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f45a20afa0d4edc9ef509aae3f16d17",
+       "model_id": "a3014779fef94ba9bb780b67a7f7707b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -955,7 +955,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d41caed03676478eb5ecc9d8ad3282c5",
+       "model_id": "651e758cddbb4f6f83375490bdf00e9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -969,7 +969,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "86830e7dd3f54040a561c90e59c60e95",
+       "model_id": "3fec37baf26d4631bd34ec4cf4b0597c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -983,7 +983,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0ff0e45d83f54a949e0726b3917f4c17",
+       "model_id": "499ec502e9c640b8a576804eb579594f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -997,7 +997,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a729a0565f74eb8a2d8e7d9cdfef848",
+       "model_id": "2755ba04bb8949ba9433bf85c700538e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1011,7 +1011,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30ff3c9b59f941b3be08d7941793efee",
+       "model_id": "33b11780585843ad9e41a71a9b861a60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1025,7 +1025,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ae6b52e663d4522bd066e549e991fb9",
+       "model_id": "2fa1e3cdbbf84a6fbe827824c0f670ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1039,7 +1039,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51183d88f537461ca69d48a847c55f46",
+       "model_id": "d4f583448fdc4cb8b53c26686e32869b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1102,7 +1102,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f645fa8908a40708f565e014bf36ac8",
+       "model_id": "3daf601ebf994bc08231f4f2bc33ee16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1116,7 +1116,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ef1956e17a242fe9b05736ca66c998f",
+       "model_id": "962bc165da874494b1e1320a71f61618",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1130,7 +1130,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47a51065501a4feda9dffba44d5b5432",
+       "model_id": "f57e192a2e3c448e920fb7818982f454",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1162,6 +1162,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'RunAppReport' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-7a2035b5d1e8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    161\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMarkdown\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'---'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    162\u001b[0m     \u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMarkdown\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m''\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 163\u001b[1;33m     \u001b[0mRunAppReport\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrunapps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'RunAppReport' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1299,7 +1310,7 @@
     "        'fdir_outputs':os.path.join(NBFDIR,'notebooks')\n",
     "        }  \n",
     "\n",
-    "    defaultrunapp={\n",
+    "    Run={\n",
     "        'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\docx_to_pdf.py'),\n",
     "        'fdir':NBFDIR,\n",
     "        'script_outputs': {'0': {\n",
@@ -1326,15 +1337,21 @@
     "    runappstemplated = RunAppsTemplated(di)\n",
     "    display(runappstemplated)\n",
     "    display(Markdown('---'))  \n",
-    "    display(Markdown('')) "
+    "    display(Markdown('')) \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
