--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -2,24 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "you dont have piexif installed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
-    "import sys\n",
-    "sys.path.append('/mnt/c/engDev/git_mf/MF_Toolbox/dev')\n",
-    "os.environ[\"mf_root\"] = \"/mnt/c/engDev/git_mf\"\n",
     "import pandas as pd\n",
-    "from IPython.display import display,  JSON, Markdown, HTML, IFrame, clear_output #Image,\n",
+    "from IPython.display import display, Image, JSON, Markdown, HTML, IFrame, clear_output\n",
     "import time\n",
     "from ipyaggrid import Grid\n",
     "import ipywidgets as widgets\n",
@@ -34,12 +23,12 @@
     "from mf_modules.file_operations import open_file\n",
     "from mf_modules.pydtype_operations import read_json, read_txt, read_yaml\n",
     "from mf_modules.datamine_functions import recursive_glob\n",
-    "from mf_modules.excel_in import mfexcel_in"
+    "from mf_modules.excel_in import ExcelIn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +382,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "#fpths=[os.path.join(os.environ['mf_root'],r'ipyrun\\data\\eg_filetypes\\eg_plotly.plotly')]\n",
+    "#d = DisplayFiles(fpths)\n",
+    "#d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -425,7 +427,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56e9ecce0036464a9e9def4f97103972",
+       "model_id": "31fb69a9d9cd4641b68f72c3558066ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -494,7 +496,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eab8973d39f44099aa3dbf6aa5c00cbd",
+       "model_id": "565614dafb984e1a9e7e850b81f97a9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,7 +556,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a374d05d8c73456f83710c7cda94bf55",
+       "model_id": "8ce17bd41643433c95007bc299042833",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,7 +594,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9644e19a1632498f8b1429fc19c0bc0b",
+       "model_id": "ff0eba25ffe844cc9fee065ca5de466b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -620,8 +622,7 @@
     "    # -\n",
     "\n",
     "    fdir = os.path.dirname(os.path.realpath('__file__'))\n",
-    "    rel = os.path.join('..','data','eg_filetypes')\n",
-    "    fdir = os.path.realpath(os.path.join(fdir,rel))\n",
+    "    fdir = os.path.realpath(os.path.join(fdir,r'..\\data\\eg_filetypes'))\n",
     "\n",
     "    fpths = recursive_glob(rootdir=fdir)\n",
     "\n",
@@ -657,7 +658,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
@@ -667,9 +670,9 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:mf_main] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-mf_main-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -681,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
