--- a/ipyrun/_ipydisplayfile.ipynb
+++ b/ipyrun/_ipydisplayfile.ipynb
@@ -4,20 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "you dont have piexif installed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
-    "sys.path.append('/mnt/c/engDev/git_mf/MF_Toolbox/dev')\n",
-    "os.environ[\"mf_root\"] = \"/mnt/c/engDev/git_mf\"\n",
     "import pandas as pd\n",
     "from IPython.display import display,  JSON, Markdown, HTML, IFrame, clear_output #Image,\n",
     "import time\n",
@@ -189,7 +179,7 @@
     "        }\n",
     "    \"\"\"\n",
     "    def __init__(self,\n",
-    "                 fpth=os.path.join(os.environ['mf_root'],r'ipyrun\\data\\eg_filetypes\\eg_plotly.plotly'),\n",
+    "                 fpth=os.path.join(os.environ['MF_ROOT'],r'ipyrun\\data\\eg_filetypes\\eg_plotly.plotly'),\n",
     "                 description=None,\n",
     "                 mf_excel=True):\n",
     "        self.fpth = fpth\n",
@@ -425,7 +415,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56e9ecce0036464a9e9def4f97103972",
+       "model_id": "93a57e4eca4b40a0b6af16b6f41523a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -494,7 +484,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eab8973d39f44099aa3dbf6aa5c00cbd",
+       "model_id": "16a6fe52256e47edbff1c562f6da4d04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -554,7 +544,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a374d05d8c73456f83710c7cda94bf55",
+       "model_id": "dd151b6107f342bbbfaa689636e08b93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -592,7 +582,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9644e19a1632498f8b1429fc19c0bc0b",
+       "model_id": "e1205729001f41bc9bc7b51accdb3d33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -657,7 +647,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
@@ -681,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
