--- a/ipyrun/_ipyeditcsv.ipynb
+++ b/ipyrun/_ipyeditcsv.ipynb
@@ -182,9 +182,7 @@
     "    def __init__(self,config):\n",
     "        self.config = config\n",
     "        self.out = widgets.Output()\n",
-    "        self._errors()\n",
-    "        self.user_keys = list(config.keys())\n",
-    "        self._update_config()\n",
+    "        self._init_RunConfig(config)\n",
     "        self.file_control_form()\n",
     "        self._init_file_controller()\n",
     "        self.sheet = self._sheet_from_fpth(self.fpth_inputs)\n",
@@ -347,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
