mf_root --> MF_ROOT

--- a/ipyrun/_filecontroller.ipynb
+++ b/ipyrun/_filecontroller.ipynb
@@ -602,7 +602,7 @@
     "    \n",
     "    # Example1\n",
     "    config={\n",
-    "    'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
+    "    'fpth_script':os.path.join(os.environ['MF_ROOT'],r'MF_Toolbox\\dev\\mf_scripts\\eplus_pipework_params.py'),\n",
     "    'fdir':'.',\n",
     "    }\n",
     "    fc = FileConfigController(config)\n",
