mf_root --> MF_ROOT

--- a/ipyrun/ipyrun_archived.ipynb
+++ b/ipyrun/ipyrun_archived.ipynb
@@ -163,7 +163,7 @@
     "    def _help(self, sender):\n",
     "        with self.out:\n",
     "            clear_output()\n",
-    "            fpth = os.path.join(os.environ['mf_root'],r'ipyrun\\docs\\images\\RunBatch.png')\n",
+    "            fpth = os.path.join(os.environ['MF_ROOT'],r'ipyrun\\docs\\images\\RunBatch.png')\n",
     "            display(Image(fpth))\n",
     "            \n",
     "    def _reset(self, sender):\n",
