--- a/ipyrun/ipyrun_overheating.ipynb
+++ b/ipyrun/ipyrun_overheating.ipynb
@@ -103,7 +103,7 @@
     "        Example:\n",
     "            ```\n",
     "            config={\n",
-    "                'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\docx_to_pdf.py'),\n",
+    "                'fpth_script':os.path.join(os.environ['MF_ROOT'],r'MF_Toolbox\\dev\\mf_scripts\\docx_to_pdf.py'),\n",
     "                'fdir':NBFDIR,\n",
     "                }    \n",
     "\n",
@@ -364,7 +364,7 @@
     "    def _help(self, sender):\n",
     "        with self.out:\n",
     "            clear_output()\n",
-    "            fpth = os.path.join(os.environ['mf_root'],r'ipyrun\\docs\\images\\RunBatch.png')\n",
+    "            fpth = os.path.join(os.environ['MF_ROOT'],r'ipyrun\\docs\\images\\RunBatch.png')\n",
     "            display(Image(fpth))\n",
     "            \n",
     "    def _reset(self, sender):\n",
