mf_root --> MF_ROOT

--- a/examples/notebooks/00_MakingARunAppWidget.ipynb
+++ b/examples/notebooks/00_MakingARunAppWidget.ipynb
@@ -259,7 +259,7 @@
        "```\r\n",
        "---\r\n",
        "Images:\r\n",
-       "    %mf_root%\\ipyrun\\docs\\images\\eg_ui.PNG\r\n",
+       "    %MF_ROOT%\\ipyrun\\docs\\images\\eg_ui.PNG\r\n",
        "\r\n",
        "\r\n",
        "## Source\r\n",
@@ -553,7 +553,7 @@
       "    Example:\n",
       "        ```\n",
       "        config={\n",
-      "            'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\docx_to_pdf.py'),\n",
+      "            'fpth_script':os.path.join(os.environ['MF_ROOT'],r'MF_Toolbox\\dev\\mf_scripts\\docx_to_pdf.py'),\n",
       "            'fdir':NBFDIR,\n",
       "            }    \n",
       "    \n",
