--- a/examples/notebooks/05_gbxml_testing-checkpoint.ipynb
+++ b/examples/notebooks/05_gbxml_testing-checkpoint.ipynb
@@ -77,7 +77,7 @@
    "outputs": [],
    "source": [
     "import os \n",
-    "fpth = os.path.join(os.environ['mf_root'], r'MF_Toolbox\\dev\\examples\\eg_filetypes\\eg_gbxml.xml')"
+    "fpth = os.path.join(os.environ['MF_ROOT'], r'MF_Toolbox\\dev\\examples\\eg_filetypes\\eg_gbxml.xml')"
    ]
   },
   {
