--- a/examples/notebooks/06_gbxml_testing2.ipynb.ipynb
+++ b/examples/notebooks/06_gbxml_testing2.ipynb.ipynb
@@ -10,7 +10,7 @@
     "%autoreload 2\n",
     "from mf_scripts.gbxml import GbxmlParser, GbxmlReport\n",
     "import os \n",
-    "fpth = os.path.join(os.environ['mf_root'], r'MF_Toolbox\\dev\\examples\\eg_filetypes\\eg_gbxml_corpus.xml')\n",
+    "fpth = os.path.join(os.environ['MF_ROOT'], r'MF_Toolbox\\dev\\examples\\eg_filetypes\\eg_gbxml_corpus.xml')\n",
     "g1 = GbxmlReport(fpth)"
    ]
   },
