removed all relative imports. minor bug-fixes

--- a/ipyrun/_ipyblocks.ipynb
+++ b/ipyrun/_ipyblocks.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd3f765346384dd18194ab4cc923875b",
+       "model_id": "60a34b8dbadd4e238a431755a39f289d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,7 +37,7 @@
     "# _dropdown\n",
     "# _selectmultiple\n",
     "# _button\n",
-    "\n",
+    "from markdown import markdown\n",
     "import ipywidgets as widgets\n",
     "\n",
     "# widget for layout constants\n",
@@ -197,13 +197,6 @@
     "                    layout=widgets.Layout(width='5%'))\n",
     "    display(_help)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
